--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Run Buddy Landing Page</title>
     </head>
     <body>
-        <h3>RUN BUDDY</h3>
-        What We Do 🏃
+        <h1>RUN BUDDY</h1>
+        What We Do What You do Your Trainers Reach Out
     </body>
 </html>
