--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
-<html lang-"en">
+<html lang="en">
+
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy Landing Page</title>
     </head>
+
     <body>
-        <!-- navigation-->
         <header>
-            <h1>RUN BUDDY</h1>
+            <h1>
+                <a href="/">RUN BUDDY</a>
+            </h1>
+            <nav>
+               <ul>
+                   <li>
+                       <a href="#what-we-do">What We Do</a>
+                    </li>
+                    <li>
+                        <a href="#what-you-do">What You Do</a>
+                    </li>
+                    <li>
+                        <a href="#your-trainers">Your Trainers</a>
+                    </li>
+                    <li>
+                        <a href="#reach-out">Reach Out</a>
+                    </li>
+               </ul> 
+            </nav>
         </header>
         
         <!--hero/jumbotron-->
@@ -39,4 +58,5 @@
             <h2>❤️ Made with love by Run Buddy.</h2>
         </footer>
     </body>
+
 </html>
