--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy Landing Page</title>
+        <link rel="stylesheet" href=".assets/css/style.css"/>
     </head>
 
     <body>
