--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
     <head>
         <meta charset="UTF-8" />
-        <title>Run Buddy Landing Page</title>
-        <link rel="stylesheet" href=".assets/css/style.css"/>
+        <title>Run Buddy</title>
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
 
     <body>
