--- a/index.html
+++ b/index.html
@@ -77,33 +77,67 @@
             <h2 class="section-title secondary-border">What You Do</h2>
 
             <div>
-                <img src="./assets/css/images/step-1.svg" alt="" />
-                <h3>Step 1: <span>Fill Out the form Above.</span></h3>
+                <img src="./assets/images/step-1.svg" alt="" />
+                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
                 <p>You're already here, so why not?</p>
             </div>
 
             <div>
-                <img src="./assets/css/images/step-2.svg" alt="" />
-                <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
+                <img src="./assets/images/step-2.svg" alt="" />
+                <h3>Step 2: <span>Consult With One of Our Trainers.</span></h3>
                 <p>Are you here to build muscle, lose weight, or just feel good?</p>
             </div>
 
             <div>
-                <img src="./assets/css/images/step-3.svg" alt="" />
+                <img src="./assets/images/step-3.svg" alt="" />
                 <h3>Step 3: <span>Get Running.</span></h3>
                 <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
             </div>
 
             <div>
-                <img src="./assets/css/images/step-4.svg" alt="" />
+                <img src="./assets/images/step-4.svg" alt="" />
                 <h3>Step 4: <span>See Results.</span></h3>
                 <p>Bi-weekly checkins with your trainer will keep you focused.</p>
             </div>
         </section>
 
         <!-- "meet the trainers" section-->
-        <section>
-            <h2>Meet the Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet the Trainers</h2>
+            <!-- first trainer bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iure recusandae libero veritatis perferendis earum consectetur, fuga nisi. Facere incidunt laboriosam libero dignissimos eligendi ut eos quo culpa aliquam ipsa.
+                    </p>
+                </div>
+            </article>
+
+            <!-- second trainer bio -->
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi aut ut tempora ducimus saepe nulla assumenda aliquam qui, temporibus praesentium porro dolor non facere veniam impedit accusamus eveniet labore quos.
+                    </p>
+                </div>
+                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+
+            <!-- third trainer bio -->
+            <article class="trainer">
+                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet consequatur totam labore sequi illum. Veritatis obcaecati maiores perferendis sit est debitis quos fugiat, voluptatum modi delectus quaerat quibusdam aliquid provident.
+                    </p>
+                </div>
+            </article>
         </section>
 
         <!-- "reach out" section-->
