--- a/index.html
+++ b/index.html
@@ -143,6 +143,30 @@
         <!-- "reach out" section-->
         <section>
             <h2>Reach Out</h2>
+            <div class="contact-info">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2921.786952341759!2d-89.2007296845313!3d42.919533979153286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88064692b29bc57b%3A0x88a46cacc555b752!2s1817%20Cedarbrook%20Ln%2C%20Stoughton%2C%20WI%2053589!5e0!3m2!1sen!2sus!4v1621859108016!5m2!1sen!2sus" 
+                width="400" 
+                height="400" 
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy">
+                </iframe>
+            </div>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    Any questions or concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main Street <br/>
+                    Some Town, CA <br/>
+                    12345<br/>
+                    P: 555.RUN.BUDZ (555.786.2839)<br/>
+                    E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+                </address>
+            </div>
         </section>
 
         <!-- footer -->
