Add content to hero, replace image

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         
         <!--hero/jumbotron-->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits.</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe voluptate amet officiis quaerat fuga eius blanditiis aspernatur est ab perspiciatis laudantium obcaecati quae nihil deleniti consectetur consequatur, aliquid fugit debitis!
+                </p>
+            </div>
             <div class="hero-form">
                 <form>
                     <h3>Get Started Today</h3>
